--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 
 <body>
 
+    <div id="calculator-body">
+        <div id="display">0123456789</div>
+        <div id="buttons">
+            <div id="numbers">
+                <button>0</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+            </div>
+            <div id="operators">
+                <button>CLEAR</button>
+                <button>*</button>
+                <button>/</button>
+                <button>-</button>
+                <button>+</button>
+            </div>
+        </div>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 
