Make clear button clear the display

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="number-btn">9</button>
             </div>
             <div id="operators">
-                <button>CLEAR</button>
+                <button id="clear-btn">CLEAR</button>
                 <button>*</button>
                 <button>/</button>
                 <button>-</button>
