Return to previous operate function, add equal button

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             </div>
             <div id="operators">
                 <button id="clear-btn">CLEAR</button>
-                <button>/</button>
-                <button>*</button>
-                <button>-</button>
-                <button>+</button>
+                <button id="equal-btn">=</button>
+                <button class="op-btn">/</button>
+                <button class="op-btn">*</button>
+                <button class="op-btn">-</button>
+                <button class="op-btn">+</button>
             </div>
         </div>
     </div>
