Add decimal button and functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <button class="number-btn">2</button>
                 <button class="number-btn">3</button>
                 <button class="number-btn">0</button>
+                <button id="decimal-btn">.</button>
             </div>
             <div id="operators">
                 <button id="clear-btn">CLEAR</button>
