Fix new inputs being added to previous input after hitting equals

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="calculator-body">
-        <div id="display">0123456789</div>
+        <div id="display">0</div>
         <div id="buttons">
             <div id="numbers">
                 <button class="number-btn">7</button>
