--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
             <div id="operators">
                 <button id="clear-btn">CLEAR</button>
+                <button id="sign-btn">+/-</button>
                 <button id="equal-btn">=</button>
                 <button class="op-btn">/</button>
                 <button class="op-btn">*</button>
