Add backspace button and move special buttons to top

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
     <div id="calculator-body">
         <div id="display">0</div>
+        <div id="special-buttons">
+            <button id="clear-btn">CLEAR</button>
+            <button id="sign-btn">+/-</button>
+            <button id="delete-btn">⟵</button>
+            <button id="equal-btn">=</button>
+        </div>
         <div id="buttons">
             <div id="numbers">
                 <button class="number-btn">7</button>
@@ -26,9 +32,6 @@
                 <button id="decimal-btn">.</button>
             </div>
             <div id="operators">
-                <button id="clear-btn">CLEAR</button>
-                <button id="sign-btn">+/-</button>
-                <button id="equal-btn">=</button>
                 <button class="op-btn">/</button>
                 <button class="op-btn">*</button>
                 <button class="op-btn">-</button>
