Update style and move special buttons back to operators section

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 
     <div id="calculator-body">
         <div id="display">0</div>
-        <div id="special-buttons">
-            <button id="clear-btn">CLEAR</button>
-            <button id="sign-btn">+/-</button>
-            <button id="delete-btn">⟵</button>
-            <button id="equal-btn">=</button>
-        </div>
         <div id="buttons">
             <div id="numbers">
                 <button class="number-btn">7</button>
@@ -32,10 +26,14 @@
                 <button id="decimal-btn">.</button>
             </div>
             <div id="operators">
+                <button id="clear-btn" class="special">AC</button>
+                <button id="sign-btn" class="special">+/-</button>
+                <button id="delete-btn" class="special">⟵</button>
+                <button id="equal-btn" class="special">=</button>
                 <button class="op-btn">/</button>
                 <button class="op-btn">*</button>
-                <button class="op-btn">-</button>
                 <button class="op-btn">+</button>
+                <button class="op-btn">-</button>
             </div>
         </div>
     </div>
